@@ -248,7 +248,7 @@ be reported to the developer! See the section "Reporting Bugs" below.
 
 
 .SH AUTHOR
-md5deep was written by Jesse Kornblum, md5deep [at] jessekornblum [dot] com.
+md5deep was written by Jesse Kornblum, research [at] jessekornblum [dot] com.
 
 .SH KNOWN ISSUES
 Using the \-r flag cannot be used to recursively process all files 
@@ -261,8 +261,7 @@ forensic integrity of this program could have serious consequenses on
 people's lives. When submitting a bug report, please include a description
 of the problem, how you found it, and your contact information.
 .PP
-Send bug reports to:
-md5deep [at] jessekornblum [dot] com
+Send bug reports to the author at the address above.
 
 .PP
 .SH COPYRIGHT
